-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.0 Beta1
-
None
-
-
86ea40b47 (dev)
While it's currently not documented in its XML specification, the AT-SPI TableCell interface has methods to retrieve the row and column headers of a cell (GetRowHeaderCells, GetColumnHeaderCells), s. https://lazka.github.io/pgi-docs/Atspi-2.0/classes/TableCell.html#Atspi.TableCell.get_row_header_cells .
The Orca screen reader for Linux makes use of these since Orca commit https://gitlab.gnome.org/GNOME/orca/-/commit/ac2c4470ff4401b53b6de48e12ea5a0a6347897c ("Prefer table cell interface for getting row and column headers"), which results in issues with the qt6 variant of LibreOffice.
Sample steps to demonstrate the issue using a Python script:
1) open the attached sample document table_headers.odt
in a current development version of LibreOffice using the qt6 variant (I'm using LibreOffice git master as of commit 84183c84d86456e3c311b35150b1fc9b63a85561)
2) run the attached Python (pyatspi) script pyatspi-script-print-tablecell-header-cells.py and look at the output:
$ ./pyatspi-script-print-tablecell-header-cells.py row header cells: [], column header cells: []
Actual result:
- the program takes a while to finish (because of timeouts)
- No header cells are printed
Expected result:
- The script should finish faster and print column header cells.