a11y atspi: Implement TableCell methods Get{Column,Row}HeaderCells

The AT-SPI TableCell interface's GetColumnHeaderCells
and GetRowHeaderCells methods were not documented in
the XML specification until recently, but are actively used,
e.g. also by the Orca screen reader since commit
https://gitlab.gnome.org/GNOME/orca/-/commit/ac2c4470ff4401b53b6de48e12ea5a0a6347897c
("Prefer table cell interface for getting row and column headers").

5145d3899d338fbb82a2d314c58eb60a4a5205f8 only implemented
the TableCell methods that were contained in the XML spec
by then.

Handle these two methods as well, and add an explicit
warning for the case an unknown method is called.

Related at-spi2-core commit adding the two missing methods to the
AT-SPI TableCell XML spec:
https://gitlab.gnome.org/GNOME/at-spi2-core/-/commit/963e99197376368e613be865e470b3af5a7a28a6
("TableCell.xml: Add Get{Column,Row}HeaderCells methods")

Fixes: QTBUG-113110
Change-Id: Ic218cdd021bbc347907762035730e6ae7d387300
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>